--- a/index.html
+++ b/index.html
@@ -354,6 +354,24 @@
             </div>
   
             <ol class="timeline-list">
+
+
+              <li class="timeline-item">
+  
+                <h4 class="h4 timeline-item-title">Full Stack Developer - Nexitus</h4>
+  
+                <span>Feb 2023 – Aug 2023 – 6 months</span>
+  
+                <p class="timeline-text">
+                  As a Full Stack Developer at Nexitus, I played a fundamental role in both frontend and backend development of applications, ensuring a comprehensive and cohesive user experience.
+                  <br>
+                  I used technologies like NestJS and GraphQL to implement modules on the server side, optimizing communication and efficient data manipulation.
+                  <br>
+                  Designed and built frontend components using Next.js, ensuring interactive and responsive user interfaces that meet usability standards.
+                </p>
+  
+              </li>
+
   
               <li class="timeline-item">
   
