--- a/index.html
+++ b/index.html
@@ -355,6 +355,23 @@
   
             <ol class="timeline-list">
 
+              <li class="timeline-item">
+  
+                <h4 class="h4 timeline-item-title">Backend Developer - Atik Soluciones</h4>
+  
+                <span>Jan 2023 – Present 2023 – 6 months</span>
+  
+                <p class="timeline-text">
+                  Development of an application for the sale of heavy vehicles in large quantities. In charge of the most important part of the MVP: the Auctions module with WebSockets, using the Nest.js (Node.js) framework along with a PostgreSQL database.                  
+                  <br>
+                  Led database modeling and refactoring to optimize project performance and scalability.
+                  – was responsible for creating new endpoints for the API, meeting functional requirements and ensuring a
+                  efficient communication between frontend and backend.                  
+                  <br>
+                </p>
+  
+              </li>
+
 
               <li class="timeline-item">
   
