chore: Refactor API endpoints for efficient communication between frontend and backend

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                   Development of an application for the sale of heavy vehicles in large quantities. In charge of the most important part of the MVP: the Auctions module with WebSockets, using the Nest.js (Node.js) framework along with a PostgreSQL database.                  
                   <br>
                   Led database modeling and refactoring to optimize project performance and scalability.
-                  – was responsible for creating new endpoints for the API, meeting functional requirements and ensuring a
+                  was responsible for creating new endpoints for the API, meeting functional requirements and ensuring a
                   efficient communication between frontend and backend.                  
                   <br>
                 </p>
